refactor: payment rejection handling and add file report writer