@@ -3,25 +3,38 @@ package com.azaatar.eventguard.service;
 import com.azaatar.eventguard.domain.PaymentProcessingReport;
 import com.azaatar.eventguard.domain.PaymentRecord;
 import com.azaatar.eventguard.domain.PaymentStatus;
-import com.azaatar.eventguard.domain.RejectedPaymentRecord;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
 import java.util.List;
 
-import static com.azaatar.eventguard.domain.RejectionReason.DUPLICATE_PAYMENT_ID;
+import static com.azaatar.eventguard.domain.RejectionStatus.DUPLICATE_PAYMENT_ID;
+import static com.azaatar.eventguard.domain.RejectionStatus.NONE;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 class PaymentProcessingServiceTest {
 
     private PaymentRecord paymentRecord(String paymentId) {
-        return new PaymentRecord(paymentId, "ACC-123", "Adam Zaatar", "adam@example.com", new BigDecimal("100.00"), "JOD", PaymentStatus.PENDING);
+        return new PaymentRecord(
+                paymentId,
+                "ACC-123",
+                "Adam Zaatar",
+                "adam@example.com",
+                new BigDecimal("100.00"),
+                "JOD",
+                PaymentStatus.PENDING
+        );
+    }
+
+    private PaymentRecord rejectedDuplicatePaymentRecord(String paymentId) {
+        PaymentRecord record = paymentRecord(paymentId);
+        record.setRejectionStatus(DUPLICATE_PAYMENT_ID);
+        return record;
     }
 
     @Test
     void givenDuplicatePaymentIdWhenProcessingThenRejectsSecondRecord() {
-
         // Arrange
         PaymentRecord original = paymentRecord("PAY-001");
         PaymentRecord duplicate = paymentRecord("PAY-001");
@@ -34,49 +47,61 @@ class PaymentProcessingServiceTest {
 
         // Assert
         assertEquals(List.of(original), report.getAcceptedRecords());
+        assertEquals(List.of(duplicate), report.getRejectedRecords());
         assertEquals(1, report.getRejectedCount());
-        assertEquals(duplicate, report.getRejectedRecords().getFirst().getPaymentRecord());
-        assertEquals(DUPLICATE_PAYMENT_ID, report.getRejectedRecords().getFirst().getReason());
-
+        assertEquals(DUPLICATE_PAYMENT_ID, report.getRejectedRecords().get(0).getRejectionStatus());
+        assertEquals(NONE, report.getAcceptedRecords().get(0).getRejectionStatus());
     }
 
     @Test
     void givenNullRecordsWhenProcessingThenRejectsInput() {
-
         // Arrange
         PaymentProcessingService service = new PaymentProcessingService();
 
         // Act and Assert
         assertThrows(IllegalArgumentException.class, () -> service.process(null));
-
     }
 
     @Test
     void givenUniquePaymentIdsWhenProcessingThenAcceptsAllRecords() {
-
         // Arrange
-        List<PaymentRecord> records = List.of(paymentRecord("PAY-001"), paymentRecord("PAY-002"), paymentRecord("PAY-003"));
-        List<RejectedPaymentRecord> rejected = List.of();
+        List<PaymentRecord> records = List.of(
+                paymentRecord("PAY-001"),
+                paymentRecord("PAY-002"),
+                paymentRecord("PAY-003")
+        );
+
         PaymentProcessingService service = new PaymentProcessingService();
 
         // Act
         PaymentProcessingReport report = service.process(records);
-        List<PaymentRecord> acceptedRecords = report.getAcceptedRecords();
 
         // Assert
-        assertEquals(records, acceptedRecords);
+        assertEquals(records, report.getAcceptedRecords());
+        assertEquals(List.of(), report.getRejectedRecords());
+        assertEquals(3, report.getAcceptedCount());
         assertEquals(0, report.getRejectedCount());
-
-
+        assertEquals(3, report.getTotalCount());
     }
 
     @Test
     void givenDuplicatePaymentIdAfterUniqueRecordsWhenProcessingThenRejectsDuplicate() {
-
         // Arrange
-        List<PaymentRecord> records = List.of(paymentRecord("PAY-001"), paymentRecord("PAY-002"), paymentRecord("PAY-001"));
-        List<PaymentRecord> expectedAccepted = List.of(paymentRecord("PAY-001"), paymentRecord("PAY-002"));
-        List<RejectedPaymentRecord> expectedRejected = List.of(new RejectedPaymentRecord(paymentRecord("PAY-001"), DUPLICATE_PAYMENT_ID));
+        List<PaymentRecord> records = List.of(
+                paymentRecord("PAY-001"),
+                paymentRecord("PAY-002"),
+                paymentRecord("PAY-001")
+        );
+
+        List<PaymentRecord> expectedAccepted = List.of(
+                paymentRecord("PAY-001"),
+                paymentRecord("PAY-002")
+        );
+
+        List<PaymentRecord> expectedRejected = List.of(
+                rejectedDuplicatePaymentRecord("PAY-001")
+        );
+
         PaymentProcessingService service = new PaymentProcessingService();
 
         // Act
@@ -87,15 +112,27 @@ class PaymentProcessingServiceTest {
         assertEquals(expectedAccepted, report.getAcceptedRecords());
         assertEquals(1, report.getRejectedCount());
         assertEquals(2, report.getAcceptedCount());
+        assertEquals(3, report.getTotalCount());
     }
 
     @Test
     void givenMultipleDuplicatesWhenProcessingThenRejectsAllLaterDuplicates() {
-
         // Arrange
-        List<PaymentRecord> records = List.of(paymentRecord("PAY-001"), paymentRecord("PAY-001"), paymentRecord("PAY-001"));
-        List<PaymentRecord> expectedAccepted = List.of(paymentRecord("PAY-001"));
-        List<RejectedPaymentRecord> expectedRejected = List.of(new RejectedPaymentRecord(paymentRecord("PAY-001"), DUPLICATE_PAYMENT_ID), new RejectedPaymentRecord(paymentRecord("PAY-001"), DUPLICATE_PAYMENT_ID));
+        List<PaymentRecord> records = List.of(
+                paymentRecord("PAY-001"),
+                paymentRecord("PAY-001"),
+                paymentRecord("PAY-001")
+        );
+
+        List<PaymentRecord> expectedAccepted = List.of(
+                paymentRecord("PAY-001")
+        );
+
+        List<PaymentRecord> expectedRejected = List.of(
+                rejectedDuplicatePaymentRecord("PAY-001"),
+                rejectedDuplicatePaymentRecord("PAY-001")
+        );
+
         PaymentProcessingService service = new PaymentProcessingService();
 
         // Act
@@ -106,16 +143,16 @@ class PaymentProcessingServiceTest {
         assertEquals(expectedAccepted, report.getAcceptedRecords());
         assertEquals(2, report.getRejectedCount());
         assertEquals(1, report.getAcceptedCount());
-
+        assertEquals(3, report.getTotalCount());
     }
 
     @Test
     void givenEmptyRecordsWhenProcessingThenReturnsEmptyReport() {
-
         // Arrange
         List<PaymentRecord> records = List.of();
         List<PaymentRecord> expectedAccepted = List.of();
-        List<RejectedPaymentRecord> expectedRejected = List.of();
+        List<PaymentRecord> expectedRejected = List.of();
+
         PaymentProcessingService service = new PaymentProcessingService();
 
         // Act
@@ -128,4 +165,5 @@ class PaymentProcessingServiceTest {
         assertEquals(0, report.getAcceptedCount());
         assertEquals(0, report.getTotalCount());
     }
+
 }
